fix: z-index modal-window, now it's up of all the blocks except sidenav & burger-header styles into header styles

--- a/english-for-kids/src/components/burger-menu/burger-menu.scss
+++ b/english-for-kids/src/components/burger-menu/burger-menu.scss
@@ -6,27 +6,7 @@
   pointer-events: none;
 }
 
-/* header */
-
 .header {
-  & {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-  
-    padding-top: 24px;
-    padding-bottom: 23px;
-  
-    border: none;
-
-    text-transform: uppercase;
-    color: white;
-  
-    // background-color: #2d303a;
-  
-    transition: padding 0.5s ease-out;
-  }
-
   &__nav {
     & {
       display: none;
@@ -51,6 +31,7 @@
       left: 0;
 
       display: block;
+      z-index: 1;
       animation-name: show-menu;
     }
   }
@@ -61,7 +42,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
   
     /* 20 * 2 + 25px (padding-left + inner-width + padding-right) */
     // height: calc(100% - calc(71px - 25px));
@@ -177,11 +158,8 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    z-index: 0;
   
     background-color: rgba(0, 0, 0, 0.4);
-  }
-
-  &_except-header {
-    z-index: 1;
   }
 }
