--- a/english-for-kids/src/components/header/header.scss
+++ b/english-for-kids/src/components/header/header.scss
@@ -1,10 +1,21 @@
 .header {
   & {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
+    padding-top: 24px;
+    padding-bottom: 24px;
+
+    border: none;
+
+    text-transform: uppercase;
+    color: white;
 
     background-color: #2d303a;
     box-shadow: 0 0 7px 0 black;
+
+    transition: padding 0.5s ease-out;
   }
 
   &__container {
